--- a/.github/workflows/asset-tracker.yml
+++ b/.github/workflows/asset-tracker.yml
@@ -8,4 +8,4 @@ jobs:
   test_commentary:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "${{ github.event.body }}"
+      - run: echo "${{ github.event.pull_request.body }}"
